--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -14,6 +14,10 @@
   color: #fdc5c4;
 }
 
+.white {
+  background-color: white;
+}
+
 .active {
   border-bottom: 1px solid black;
 }
@@ -159,8 +163,74 @@
   background-color: rgb(99, 194, 194);
   color: white;
   border: none;
+  transition: 0.3s;
+  cursor: pointer;
 }
 
 .signin__btn:hover {
   background-color: #fb9593;
+}
+
+.signin__box__bottom a {
+  text-decoration: none;
+  color: black;
+  transition: 0.3s;
+}
+
+.signin__box__bottom a:hover {
+  color: #fb9593;
+}
+
+.umemploy__box {
+  display: none;
+}
+
+
+.li__box:hover .umemploy__box {
+  display: block;
+}
+
+.umemploy__box {
+  position: absolute;
+  z-index: 1;
+  background-color: white;
+  box-shadow: 0px 7px 19px 5px rgba(0, 0, 0, 0.18);
+}
+
+.umemploy__box {
+  background-color: #faebb0;
+  /* color: #fb9593; */
+}
+
+/* unemploy頁面 */
+.unemploy__content__bg {
+  /* height: 500px; */
+  /* background-image: linear-gradient(to right, #fb9593, #faebb0); */
+  /* width: 100px; */
+  background-image: url(//cdn.shopify.com/s/files/1/2654/7138/files/bonblissity_hero_candyscrubs_597667b7-69cd-4b8d-8934-0c1dbf3f980f_1800x1800.jpg?v=1519934160);
+  background-size: 100% 100%;
+}
+
+.unemploy__content__box {
+  box-shadow: 0px 7px 19px 5px rgba(0, 0, 0, 0.18);
+}
+
+.unemploy__content__box__top {
+  border-bottom: 2px solid rgba(0, 0, 0, 0.76);
+}
+
+.step__circle {
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  background-color: lightgrey;
+}
+
+.inprogress {
+  background-color: rgb(99, 194, 194);
+
+}
+
+.question__title {
+  margin: 0px;
 }
