--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -239,8 +239,7 @@ button {
   border: 2px solid #fb9593;
 } */
 
-.pagetwo__careamount {
-}
+.pagetwo__careamount {}
 
 .pagetwo__careamount:focus {
 	outline: none !important;
@@ -390,7 +389,7 @@ button {
 	color: #fa524f;
 }
 
-.account__box:hover > .account__dropdown {
+.account__box:hover>.account__dropdown {
 	display: block;
 }
 
@@ -584,4 +583,8 @@ button {
 .edit__input:focus {
 	outline: none !important;
 	border: 2px solid #acd5d3;
+}
+
+.user__name {
+	color: #474747;
 }
