--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -604,5 +604,30 @@ button {
 
 
 .child__cmmt__box {
-	background-color: #e7f6f9;
+	background-color: #f5f5f5;
+}
+
+.child__cmmt {
+	border-bottom: 1px solid #e9e9e9;
+}
+
+.child__cmmt__floor {
+	color: #aaaaab;
+	font-size: 14px;
+}
+
+.heart-red {
+	color: rgb(234, 92, 92);
+}
+
+.heart-grey {
+	color: #aaaaab;
+}
+
+.fa-heart {
+	cursor: pointer;
+}
+
+.fa-heart:hover {
+	color: rgb(234, 92, 92);
 }
