--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -83,8 +83,8 @@ button {
 /* home */
 .home__banner {
 	/* height: 400px; */
-	background-image: url(https://trello-attachments.s3.amazonaws.com/5c1474d6853d5649f4a2f898/5c14d0656cb11845a18a9494/c1c2b396879e8eb80ea196b2f44e9bf8/Hero-01.jpg);
-	background-size: 100% 100%;
+  background-image: url(https://trello-attachments.s3.amazonaws.com/5c1474d6853d5649f4a2f898/5c14d0656cb11845a18a9494/c1c2b396879e8eb80ea196b2f44e9bf8/Hero-01.jpg);
+  background-size: 100% 100%;
 }
 
 .home__banner__btn {
@@ -271,7 +271,7 @@ button {
 }
 
 .course__banner {
-	background-image: url(https://images.pexels.com/photos/164880/pexels-photo-164880.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500);
+	background-image: url(https://images.pexels.com/photos/401213/pexels-photo-401213.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2);
 	background-size: 100% 100%;
 }
 
@@ -382,7 +382,8 @@ button {
 .course__banner__shadow {
 	position: absolute;
 	width: 100%;
-	height: 100%;
+	height: 60vh;
+  
 	background-color: rgba(256, 256, 256, 0.4);
 }
 
