feat: add resume update service

--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -440,7 +440,7 @@ button {
 
 .club__name__box {
 	color: white;
-	background-color: #77c9c8;
+	background-color: #efecec;
 	cursor: pointer;
 }
 
@@ -459,7 +459,7 @@ button {
 }
 
 .blog__box {
-	background-color: #77c9c8;
+	background-color: #efecec;
 }
 
 .blog__box .post__box {
